z-index navbar corrected

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ li, ul {
   width: 100%;
   justify-content: center;
   box-shadow: 0 2px 20px 5px #f2f2f2;
-  z-index:6;
+  z-index:3;
 }
 .navBar{
   max-width: 1440px;
@@ -67,6 +67,7 @@ li, ul {
   background-color: rgb(253, 103, 102);
   justify-content: center;
   align-content: space-between;
+  z-index: 4;
 }
 .menuItems{
   display: grid;
